--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "homepage": "http://client.master-capture.com/",
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@types/mui-datatables": "^3.2.1",
     "@types/node": "12.11.1",
     "@types/react": "^16.9.43",
     "@types/react-dom": "16.9.2",
@@ -13,10 +16,13 @@
     "ant-design-pro": "^2.3.2",
     "antd": "^4.4.3",
     "firebase": "^7.16.0",
+    "material-table": "^1.69.0",
+    "mui-datatables": "^3.4.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-csv-reader": "^3.1.1",
     "react-dom": "^16.10.2",
+    "react-highlight-words": "^0.16.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "react-scripts-ts": "^3.1.0",
